[project]
name = "diff-vision-transformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "huggingface-hub>=0.26.1",
    "load-dotenv>=0.1.0",
    "safetensors>=0.4.5",
    "torch>=2.5.0",
    "torchsummary>=1.5.1",
    "torchvision>=0.20.0",
    "typer>=0.12.5",
]
